# internal/service/resource_dto.go
@@ -1,13 +1,13 @@
 package service
 
 type Resource struct {
-	ID          int    `json:"id" example:"1"`
-	Name        string `json:"name_at" example:"2000-01-01T12:03:00"`
-	amount      string `json:"amount_at" example:"2000-01-01T12:03:00"`
-	measurement string `json:"measurement_at" example:"2000-01-01T12:03:00"`
-	CreatedAt   string `json:"created_at" example:"2000-01-01T12:03:00"`
-	UpdatedAt   string `json:"updated_at" example:"2000-01-01T12:03:00"`
-	DeletedAt   string `json:"deleted_at" example:"2000-01-01T12:03:00"`
+	ID          int     `json:"id" example:"1"`
+	CreatedAt   string  `json:"created_at" example:"2000-01-01T12:03:00"`
+	UpdatedAt   string  `json:"updated_at" example:"2000-01-01T12:03:00"`
+	DeletedAt   string  `json:"deleted_at" example:""`
+	Name        string  `json:"name_at" example:"Arroz"`
+	Amount      float32 `json:"amount" example:"5"`
+	Measurement string  `json:"measurement" example:"Kg"`
 }
 
 type ResourceResponse struct {
@@ -19,5 +19,7 @@ type ResourcesResponse struct {
 }
 
 type ResourceDto struct {
-	Name string `json:"name" example:"Cláudio" binding:"required"`
+	Name        string  `json:"name_at" example:"Arroz"`
+	Amount      float32 `json:"amount" example:"5"`
+	Measurement string  `json:"measurement" example:"Kg"`
 }
